--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -201,6 +201,10 @@
     | 
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
+    |
+    <a href="https://lrec-coling-2024.org/" target="_blank">COLING</a>
+    |
+    <a href="https://2024.naacl.org/" target="_blank">NAACL</a>
     |   
     <a href="" target="_blank">ISWC</a>
     |
@@ -214,7 +218,7 @@
     |
     <a href="" target="_blank">IJCNN</a>
     |
-    <a href="http://pakdd24.pakdd.org/" target="_blank">PAKDD</a>
+    <a href="https://pakdd2024.org/" target="_blank">PAKDD</a>
     |
     <a href="https://www.ecir2024.org/" target="_blank">ECIR</a>
     |
@@ -250,6 +254,8 @@
     |
 <!-- software engineering - C-->
     <a href="https://ksiresearch.org/seke/seke24.html" target="_blank">SEKE</a>
+    |
+    <a href="" target="_blank">SETTA</a>
     |
     <a href="" target="_blank">EASE</a>
     |
@@ -287,7 +293,7 @@
     <a href="https://sigir.org/sigir2023/" target="_blank">SIGIR</a>
     |
 <!-- hybrid - A-->
-    <a href="https://ijcai-22.org/" target="_blank">IJCAI</a>
+    <a href="https://ijcai-23.org/" target="_blank">IJCAI</a>
     |
     <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
     |
@@ -390,6 +396,8 @@
 <!-- software engineering - C-->
     <a href="http://ksiresearch.org/seke/seke23.html" target="_blank">SEKE</a>
     |
+    <a href="http://www.ios.ac.cn/setta2023/index.php" target="_blank">SETTA</a>
+    |
     <a href="https://conf.researchr.org/home/ease-2023#:~:text=EASE%20is%20an%20internationally%20leading%20venue%20for%20academics,2023%20and%20hosted%20by%20The%20University%20of%20Oulu." target="_blank">EASE</a>
     |
     <a href="https://conf.researchr.org/home/internetware-2023" target="_blank">Internetware</a>
@@ -491,6 +499,8 @@
     |    
     <a href="https://mp.weixin.qq.com/s/lWumoCqKnkPrMBjpPuGM1w" target="_blank">多篇论文入选ICASSP 2023！火山语音有效解决多类实践问题</a>
     |
+    <a href="https://mp.weixin.qq.com/s/1pLXpTSkJIEAel1348LjJw" target="_blank">快讯｜北邮GAMMA LAB的三篇工作被CIKM 2023 接收</a>
+    |    
     <a href="https://mp.weixin.qq.com/s/Prg_iwcbbC7QMup_i1ZHzw" target="_blank">LeCun力挺，马毅教授五年集大成之作：完全数学可解释的白盒Transformer，性能不输ViT</a>
     |
     <br/>
@@ -1750,7 +1760,55 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/UdI9UAe0Uqu48-OxQj_arQ" target="_blank">首个中文版大语言模型综述来了！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/wUuAHsiZJmpCPn_3uvT4Aw" target="_blank">ChatGLM团队发布AI Agent能力评测工具AgentBench：GPT-4一骑绝尘，开源模型表现非常糟糕！</a>
-    |                              
+    |
+    <!-- 8.10 -->
+    <a href="https://mp.weixin.qq.com/s/xBF6AUVMHE2BXqJlzukB2A" target="_blank">清华面壁智能推出大模型「最强工具全家桶」，接入16000+真实API，媲美ChatGPT</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/5Ejc2JNefZK0lockU70l-Q" target="_blank">大模型的数据隐私问题有解了，浙江大学提出联邦大语言模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mhXlBTQ_neNvCdVWw7q7_A" target="_blank">普林斯顿LK-99研究支持北大结果，38页论文提出铜替代铅或不可行</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/-qXAEgVMNuxtYAmEO5BoUQ" target="_blank">探索大语言模型在图学习上的潜力</a>
+    |
+    <!-- 8.11 -->
+    <a href="https://mp.weixin.qq.com/s/RDytoGLA7D8-KfKKwQje1g" target="_blank">大模型前沿动态：BiomedGPT、ArtGPT-4、Chain of Thought、INLP</a>
+    |
+    <!-- 8.12 -->
+    <a href="https://mp.weixin.qq.com/s/L4cDiQkHDV99nvitW8XNzg" target="_blank">大模型MBTI测试来了！原来GPT-4是i型人格！ChatGPT是e型人格</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dXrVrnWFVAXcmmZm-ghCPw" target="_blank">21类推理题GPT-4全翻车，MIT校友新研究表明GPT-4不会推理，马库斯：AGI太遥远</a>
+    |
+    <!-- 8.14 -->
+    <a href="https://mp.weixin.qq.com/s/diK88UmXWGKqP-6ZhXQbBg" target="_blank">香港大学余涛组推出开源XLANG Agent！支持三种Agent模式</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/z5wNS_TUBler1WleGI6Lrw" target="_blank">谷歌发现大模型「领悟」现象！训练久了突然不再死记硬背，多么痛的领悟</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/EcEneu270zk-XcfrKB_2gA" target="_blank">UC伯克利教授惊人预测：2030年GPT可执行人类180万年工作，一天学2500年知识</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lppMId0v4Jp53L-x1joVwA" target="_blank">LLM-Adapter: 一个将各种适配器集成到大型语言模型中的框架</a>
+    |
+    <!-- 8.16 -->
+    <a href="https://mp.weixin.qq.com/s/M9rqURP54JNhmH4lfItJow" target="_blank">羊驼再度进化成鲸鱼！LeCun称超越其他LLM，可实现指令自动注释</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/y5ex6NC-ja776Y4ae45AhA" target="_blank">Bengio带来人工智能十年跨界秀！良心制作讲述AI for Science和AI跨界核心挑战，已Nature发文</a>
+    |
+    <!-- 8.17 -->
+    <a href="https://mp.weixin.qq.com/s/cVA5sSETniCx3sXAlbLNZw" target="_blank">黄学东：大模型时代需要注重「三个臭皮匠」的联合能力丨GAIR 2023</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/VLSMtTbWYB7xBgPoeC8EcA" target="_blank">甲小姐对话黄民烈：功能AI和情感AI结合才是真正的AGI｜甲子光年</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eQL-yvz7JIuObY1CUe2gsw" target="_blank">用LLM(大模型)进行关系抽取</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/M3WKKr7CvCHgZQgKVfR3SA" target="_blank">文心一言杀疯了！大模型社区、插件系统来了，码农神器发布，AI原生时代降临</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0TrVZ23OCcUTS3pi2OdoOA" target="_blank">OpenAI凌晨曝光GPT-4新功能！一天可代替人类半年审核工作</a>
+    |
+    <!-- 8.18 -->
+    <a href="https://mp.weixin.qq.com/s/QlxLOIP9B8-PTd0SOjmHWA" target="_blank">OpenAI官宣，收购开源版「我的世界」初创公司，下一步押注AI智能体</a>
+    | 
+    <!-- 8.21 -->
+    <a href="https://mp.weixin.qq.com/s/VwU0hDK_aUyPgNLirMcDiA" target="_blank">波士顿大学「鸭嘴兽-70B」登顶Hugging Face大模型排行榜！高效数据集+独特LoRA微调是关键</a>
+    |         
 </br>
 </br>
 AI论文: 
@@ -2569,7 +2627,6 @@ AI Big Model:
     
 <!-- 2018 -->
 <h4>2018</h4>
-
     <a href="https://acl2018.org/programme/papers/" target="_blank">ACL</a>
     |
     <a href="http://naacl2018.org/" target="_blank">NAACL</a>
