--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1808,7 +1808,20 @@ ChatGPT:
     | 
     <!-- 8.21 -->
     <a href="https://mp.weixin.qq.com/s/VwU0hDK_aUyPgNLirMcDiA" target="_blank">波士顿大学「鸭嘴兽-70B」登顶Hugging Face大模型排行榜！高效数据集+独特LoRA微调是关键</a>
-    |         
+    |
+    <!-- 8.22 -->
+    <a href="https://mp.weixin.qq.com/s/t4lR_379CN4Yhg1lAaaHAw" target="_blank">周伯文：下一代大模型 OS，工具和语言缺一不可丨GAIR 2023</a>
+    |
+    <!-- 8.23 -->
+    <a href="https://mp.weixin.qq.com/s/pc5pdGfQW5DrxVrHlqRYCA" target="_blank">【小瑶智能体】GPT-3.5 Turbo正式开放微调功能！开启个性化模型新纪元</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/CQOe_HY9mk7pBJ7gUqlwAQ" target="_blank">谷歌发布全新搜索系统AVIS！让视觉大模型指导搜索，集成三类工具</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Cvo7eEan6ff1Lt8lrLXApA" target="_blank">GPT-4没有意识！但图灵奖得主Bengio等88页论文暗示「天网」迟早降临</a>
+    |
+    <!-- 8.24 -->
+    <a href="https://mp.weixin.qq.com/s/9aI5u-Os2Dr64qfQbObMwQ" target="_blank">1300亿参数，国内首个数学大模型MathGPT上线！多项基准赶超GPT-4</a>
+    |           
 </br>
 </br>
 AI论文: 
@@ -3799,6 +3812,9 @@ Distributional System Field：
     <a href="https://haow.ca/" target="_blank">Hao Wang [<a href="https://intellisys.haow.ca/" target="_blank">IntelliSys Lab</a>]</a>
     | 
     <a href="https://haow.ca/" target="_blank">Yang You [<a href="https://ai.comp.nus.edu.sg/" target="_blank">HPC-AI</a>]</a>
+    |
+<!-- The Singapore University of Technology and Design -->
+    <a href="https://shuhaozhangtony.github.io/" target="_blank">Shuhao Zhang</a>
     |
 <!-- The Chinese University of Hong Kong (CUHK)  -->
     <a href="http://www.cse.cuhk.edu.hk/~jcheng/index.html" target="_blank">James Cheng</a>
