--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -241,7 +241,7 @@
     |
     <a href="#" target="_blank">RE</a>
     |
-    <a href="#" target="_blank">CAiSE</a>
+    <a href="https://cyprusconferences.org/caise2024/" target="_blank">CAiSE</a>
     |
 <!-- Neural network - C--> 
     <a href="" target="_blank">ICONIP</a>
@@ -333,7 +333,7 @@
     |
     <a href="#" target="_blank">RE</a>
     |
-    <a href="#" target="_blank">CAiSE</a>
+    <a href="https://caise23.svit.usj.es/" target="_blank">CAiSE</a>
     |
 <!--     <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
     | -->
@@ -1821,7 +1821,47 @@ ChatGPT:
     |
     <!-- 8.24 -->
     <a href="https://mp.weixin.qq.com/s/9aI5u-Os2Dr64qfQbObMwQ" target="_blank">1300亿参数，国内首个数学大模型MathGPT上线！多项基准赶超GPT-4</a>
-    |           
+    |  
+    <!-- 8.26 -->
+    <a href="https://mp.weixin.qq.com/s/rqZs_C7EWOprIiwE6QipyA" target="_blank">Meta又向开源社区扔了一颗炸弹！发布AI代码生成SOTA大模型Code Llama</a>
+    | 
+    <!-- 8.27 -->
+    <a href="https://mp.weixin.qq.com/s/_wEggvccbWnvCl7rXnZLZg" target="_blank">SeqGPT: 开箱即用的开放域自然语言理解大模型</a>
+    | 
+    <!-- 8.28 -->
+    <a href="https://mp.weixin.qq.com/s/tEJpA6xE63Ma46hjwO8cBg" target="_blank">人大高领人工智能学院发布AI自主智能体综述！32个AI Agent的综合分析</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/T3jVZqGh46ztytR5ky1jSA" target="_blank">代码大模型神仙打架，WizardCoder发布新模型，超越最新GPT-4以外所有闭/开源模型</a>
+    |    
+    <!-- 8.29 -->
+    <a href="https://mp.weixin.qq.com/s/2JlKUVsJ0gyjNLMgy3RFRg" target="_blank">重磅！OpenAI突然发布企业版ChatGPT：没有限制、更快、更强、更安全的GPT-4</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/UV-uOv6SbdK4VpHQ9OdGig" target="_blank">仅用200条样本，训出超越MiniGPT-4的模型！这款数据选择器值得拥有</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/BG4JCjeIzhG191U-R_fseA" target="_blank">文生图prompt不再又臭又长！LLM增强扩散模型，简单句就能生成高质量图像</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/s8ytzXhX2sOD8i3kphoibw" target="_blank">实测学而思MathGPT大模型：中小学数学解题正确率有望在全球范围内创造新 SOTA</a>
+    |
+    <!-- 8.30 -->
+    <a href="https://mp.weixin.qq.com/s/nMh0USEuLlelhwt8ivvCtQ" target="_blank">甲骨易AI研究院推出中文大语言模型评测集合-LucyEval，让智能有迹可循！</a>
+    | 
+    <!-- 8.31 -->
+    <a href="https://mp.weixin.qq.com/s/BNuv4GwpwUAtERBDPro8Bg" target="_blank">北大硕士RLHF实践，基于DeepSpeed-Chat成功训练上自己的模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NCUErYYQXpcuKerTK0qv7w" target="_blank">营收有望突破 10 亿美元！OpenAI 发布 ChatGPT 企业版，开启疯狂变现之路 ？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WCwH9G1gZ-MF4q7QhsfxDA" target="_blank">大模型要占你多少内存？这个神器一键测量，误差低至0.5MB，免费可用</a>
+    |
+    <!-- 9.1 -->
+    <a href="https://mp.weixin.qq.com/s/V3GDJ7UGuZVAjMWUj3VXHw" target="_blank">DISC-MedLLM：复旦大学团队发布中文医疗健康个人助手，开源47万微调数据</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ajanwP3-TOPbUua-lIJ18w" target="_blank">超越AlphaGo的里程碑式突破！AI击败人类世界冠军，登上Nature</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/4WZSpO52pO82awjNnLVvdQ" target="_blank">LeCun再泼冷水：只会看书的语言模型永远无法实现「类人智能」</a>
+    |   
+    <a href="https://mp.weixin.qq.com/s/H5WIdX30np9HEPOxHsllAw" target="_blank">1句指令+5美元+20分钟，就能训练出小型专业模型，Prompt2Model了解一下</a>
+    | 
+     
 </br>
 </br>
 AI论文: 
