--- a/pages/activities.html
+++ b/pages/activities.html
@@ -70,6 +70,9 @@
     <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
 
 
+    <li><strong>PC member</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
+
+
     <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
 
 
@@ -123,6 +126,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
+
+    
     <li><strong>Invited Reviewer</strong>, The 30th International Conference on Neural Information Processing (<a href="http://www.iconip2023.org/index.html"><strong><u><font color="#874e26">ICONIP 2023</font></u></strong></a>), Changsha, China, November 20-23, 2022</li>
 
 
