--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1860,8 +1860,21 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/4WZSpO52pO82awjNnLVvdQ" target="_blank">LeCun再泼冷水：只会看书的语言模型永远无法实现「类人智能」</a>
     |   
     <a href="https://mp.weixin.qq.com/s/H5WIdX30np9HEPOxHsllAw" target="_blank">1句指令+5美元+20分钟，就能训练出小型专业模型，Prompt2Model了解一下</a>
+    |
+    <!-- 9.3 -->
+    <a href="https://mp.weixin.qq.com/s/Y4aujJWGwRshplw1-DzyEw" target="_blank">智能体=LLM(大语言模型)+记忆+规划技巧+工具使用</a>
     | 
-     
+    <a href="https://mp.weixin.qq.com/s/YLOAFJjeHZmSS09_Q9v8Ag" target="_blank">陶哲轩：GPT-4神助攻，写Python代码轻松省半小时</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/i71w1rl_WN0-BZkgzO_7_Q" target="_blank">GPT-5正秘密训练！DeepMind联创爆料，这模型比GPT-4大100倍</a>
+    |
+    <!-- 9.4 -->
+    <a href="https://mp.weixin.qq.com/s/pMtmc8MeKKW8YUTByOX-zw" target="_blank">GPT-4破防啦！用密码和GPT-4聊天，成功绕过了GPT-4的安全机制！港中大（深圳）告诉你方法</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/M0O1wNi6pEabBnPHEm3TkA" target="_blank">AI已拥有嗅觉且超越人类？谷歌绘出50万气味图谱，Science发文</a>
+    | 
+    <a href="https://note.youdao.com/web/#/file/WEB28a48cbae6875a21902d63f8d7b6b373/note/WEB699c4e4f64182ba69f8090dc3ce912c3/" target="_blank">Reddit一则控诉贴爆火！独立游戏开发者因调用ChatGPT惨遭Steam下架</a>
+    |   
 </br>
 </br>
 AI论文: 
