--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ Check out Sheng's up-to-date CV for more details.
   <a href="https://www.cie.org.cn/list_43/11070.html" target="_blank">中国电子学会关于《电子技术、通信技术领域高质量科技期刊分级目录（征求意见稿）》和《计算机技术领域高质量科技期刊分级目录（征求意见稿）》的公示</a>
   |
   <a href="https://mp.weixin.qq.com/s/VgEHWs9b26W6H1wzQsXYFg" target="_blank">CCF18场会议被中国科协《重要学术会议指南 (2023)》收录</a>
+  |
   <a href="https://www.ccf.org.cn/c/2019-04-25/663625.shtml" target="_blank">中国计算机学会推荐国际学术会议和期刊目录 (2019年发布)</a>
 <!--  <br /> -->
   |
@@ -201,6 +202,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="./venue/通信、计算机等领域常见A类国际学术会议.docx" target="_blank">通信、计算机等领域常见A类国际学术会议</a>
 <!--  <br /> -->
+  |
+  <a href="https://mp.weixin.qq.com/s/03b0A9dzFTbVbbcSM7FHhQ" target="_blank">关于指挥与控制领域高质量科技期刊分级目录评审结果的公示</a>  
   |
   <a href="http://www.letpub.com.cn/index.php?page=journalapp&view=search" target="_blank">最新SCI期刊查询及投稿分析系统</a>
   <br />
