--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -202,8 +202,6 @@
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
     |
-    <a href="https://lrec-coling-2024.org/" target="_blank">COLING</a>
-    |
     <a href="https://2024.naacl.org/" target="_blank">NAACL</a>
     |   
     <a href="" target="_blank">ISWC</a>
@@ -1874,7 +1872,53 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/M0O1wNi6pEabBnPHEm3TkA" target="_blank">AI已拥有嗅觉且超越人类？谷歌绘出50万气味图谱，Science发文</a>
     | 
     <a href="https://note.youdao.com/web/#/file/WEB28a48cbae6875a21902d63f8d7b6b373/note/WEB699c4e4f64182ba69f8090dc3ce912c3/" target="_blank">Reddit一则控诉贴爆火！独立游戏开发者因调用ChatGPT惨遭Steam下架</a>
-    |   
+    |
+    <!-- 9.5 -->
+    <a href="https://mp.weixin.qq.com/s/1RZeROVIMVyJyzk61NbGmQ" target="_blank">像人一样开车，大语言模型建攻自动驾驶！自动驾驶迎来ChatGPT时刻</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/eCcDG6XCZFP0tUpAi37HCg" target="_blank">使用LLM构建AI Agents的正确姿势！ChatGPT作者博客全面总结</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/by98iMiWjYFBO3jlx_3oEw" target="_blank">700亿参数Llama 2训练加速195%！训练/微调/推理全流程方案开源，0代码一站解决</a>
+    | 
+    <!-- 9.6 -->
+    <a href="https://mp.weixin.qq.com/s/v900Qje7iGONNV8NT3vvNw" target="_blank">Meta发布大规模视觉模型评估基准FACET！开源视觉模型DINOv2允许商用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/pDU8Mqgyc8XzbuqNiI1cgQ" target="_blank">GPT-4写代码不如ChatGPT，误用率高达62%！加州大学两位华人开源代码可靠性基准RobustAPI</a>
+    |
+    <!-- 9.7 -->
+    <a href="https://mp.weixin.qq.com/s/6PZst_BdpprXyBG_06B2nA" target="_blank">GitHub热榜登顶：开源版GPT-4代码解释器，可安装任意Python库，本地终端运行</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/y4T5yyoCQ6kp154AuSqLng" target="_blank">ChatGPT上线“论文神器”插件！无需关键字即可搜索2亿文章，链接绝对保真</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/s59mGXm5C8-Atxp4LdsNPA" target="_blank">Windows 12网页版超前体验，原作竟是国内一名14岁初中生！</a>
+    |
+    <!-- 9.8 -->
+    <a href="https://mp.weixin.qq.com/s/ghbpaYxQ-lpk9yfEi0l_tQ" target="_blank">180B参数的Falcon登顶Hugging Face，超越Llama 2 ，自称当前最好开源大模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/s3u5qATX1F9qN-UET85qgA" target="_blank">苹果日砸百万，挖角谷歌，Apple GPT研发大提速。Siri即将迎来革命性升级！</a>
+    |  
+    <!-- 9.11 -->
+    <a href="https://mp.weixin.qq.com/s/M9kJ9G--B2QUTc1T869lKQ" target="_blank">强！谷歌DeepMind新论文放出大语言模型最佳提示词，由AI设计效果超人类</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/uERsmdkuS3BYgIgcMhanNw?poc_token=HE1IAGWjnO91zWYNEMM2FUN6FwfeI8SK3BG9Qwnn" target="_blank">H100推理飙升8倍！英伟达官宣开源TensorRT-LLM，支持10+模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Us4kQmdHN4oN8Mv17-v6Ow" target="_blank">世界AI最具影响力人物榜出炉，李开复李彦宏奥特曼榜上有名</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/dq9waG2CNU5jTtopbIj3XQ" target="_blank">Adobe AI生图工具企业版上线并放话：用户只管玩，侵权我们赔！</a>
+    |    
+    <!-- 9.12 -->
+    <a href="https://mp.weixin.qq.com/s/7XUgyHRM9inxovMVhdIu2Q" target="_blank">文勇刚：大模型时代，我们需要怎样的数据中心？丨GAIR 2023</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/nadV4leQ1KLMHTG5TlKWig" target="_blank">大模型应用创业大赛开启，与顶级投资人和技术大咖共同打造你的创意产品！</a>
+    |        
+    <a href="https://mp.weixin.qq.com/s/PGMVqjeI18x7GZyksvtGzQ" target="_blank">大模型偏见有多严重？柏林洪堡大学发布新工具OpinionGPT，你的AI真的公正吗？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/RN1uluQPvafGOBvkmmf0ng" target="_blank">Meta被曝明年发布「开源版GPT-4级」全新大模型！参数量比Llama 2大数倍，可免费商用</a>
+    | 
+    <!-- 9.13 -->
+    <a href="https://mp.weixin.qq.com/s/xK3-6Tynj0du4R0R_VAB-w" target="_blank">Github项目分享 | MindChat：心理大模型</a>
+    | 
+
 </br>
 </br>
 AI论文: 
