--- a/pages/activities.html
+++ b/pages/activities.html
@@ -70,6 +70,9 @@
     <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
 
 
+    <li><strong>PC member</strong>, 2024 SIAM International Conference on Data Mining (<a href="https://www.siam.org/conferences/cm/conference/sdm24"><strong><u><font color="#874e26">SDM 2024</font></u></strong></a>), Westin Houston, TX, U.S., April 18-20, 2024</li>
+
+    
     <li><strong>PC member</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
 
 
@@ -126,6 +129,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, 2024 SIAM International Conference on Data Mining (<a href="https://www.siam.org/conferences/cm/conference/sdm24"><strong><u><font color="#874e26">SDM 2024</font></u></strong></a>), Westin Houston, TX, U.S., April 18-20, 2024</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 29th International Conference on Database Systems for Advanced Applications (<a href="https://www.dasfaa2024.org//"><strong><u><font color="#874e26">DASFAA 2024</font></u></strong></a>), Gifu, Japan, May 13-16, 2024</li>
 
     
