--- a/pages/activities.html
+++ b/pages/activities.html
@@ -224,6 +224,9 @@
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
 
 
+    <li><strong>Invited Reviewer</strong>, Information Processing and Management (<a href="https://www.sciencedirect.com/journal/information-processing-and-management"><strong><u><font color="#874e26">IPM</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
 
 
