--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1917,7 +1917,114 @@ ChatGPT:
     | 
     <!-- 9.13 -->
     <a href="https://mp.weixin.qq.com/s/xK3-6Tynj0du4R0R_VAB-w" target="_blank">Github项目分享 | MindChat：心理大模型</a>
+    |
+    <!-- 9.14 -->
+    <a href="https://mp.weixin.qq.com/s/C1cRha_4AMmaPGDwevs_UA" target="_blank">突破大型语言模型输入字符限制的方法有了！</a>
+    |
+    <!-- 9.15 -->
+    <a href="https://mp.weixin.qq.com/s/M9kJ9G--B2QUTc1T869lKQ" target="_blank">GPT-4成功得出P≠NP，陶哲轩预言成真！97轮「苏格拉底式推理」对话破解世界数学难题</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/LryQLcpFKBbpFm0_BWm81Q" target="_blank">震撼！全球首个公开确认外星生命存在的国家揭晓！</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/zSFf2EuOo5KIaYhtS5TOwA" target="_blank">TensorFlow 2.0：Windows GPU的遗弃者，Bug的孵化器，真的要走向黄昏了吗？</a>
+    | 
+    <!-- 9.18 -->
+    <a href="https://mp.weixin.qq.com/s/S09sJiZgsWhH5NiJPAt0tA" target="_blank">8个ChatGPT玩狼人杀，带节奏，装无辜，打掩护，一样不落</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/4V_40U92iQaaroc2XGbjjg" target="_blank">RACV2023观点集锦 | 大模型&ChatGPT对计算机视觉的影响</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/q7Afbz4YjwArA26B0buulw" target="_blank">4岁男孩3年求医17位专家无果，ChatGPT精准揪出病因</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kCQ2PHdI_yScbdhg4dErmA" target="_blank">特稿丨刘挺：从ChatGPT谈大语言模型及其应用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BGnY3YfbWvYjfMY9SVtFMA" target="_blank">上海AI实验室发布大模型训练工具箱XTuner，大幅降低训练成本</a>
+    | 
+    <!-- 9.19 -->
+    <a href="https://mp.weixin.qq.com/s/g3ovou6YoUVd3h0F0y9Qfw" target="_blank">GPT-4终结人工标注！AI标注比人类标注效率高100倍，成本仅1/7</a>
+    |
+    <!-- 9.20 -->
+    <a href="https://mp.weixin.qq.com/s/8H0XRns7jmS4OdbFQ2aZKA" target="_blank">一文总结提示工程框架，除了CoT还有ToT、GoT、AoT、SoT、PoT</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/1K7ajyO1Ex9utzMBr5cVxw" target="_blank">GPT-5来了？OpenAI被曝加急训练多模态大模型Gobi，一举狙杀谷歌Gemini！</a>
+    |
+    <!-- 9.21 -->
+    <a href="https://mp.weixin.qq.com/s/faIqPvboX5RmO-SujheXwQ" target="_blank">重磅！OpenAI将发布DALL·E 3，多模态ChatGPT来了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/rigOwqYLiT775amA6oakDg" target="_blank">AI自我进化！DeepMind揭秘：语言模型竟能自我优化Prompt</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/YaUebcz_D2jtVT9Hi3z9vA" target="_blank">谷歌版ChatGPT能读你邮件了，一键安排日程订机酒</a>
+    |     
+    <!-- 9.22 -->
+    <a href="https://mp.weixin.qq.com/s/0xt-EcuKYo7ceU4tBm3EDg" target="_blank">对话澜码周健：大模型不是万能的，也不会弯道超车丨AGI 十人谈</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-qAuioes5DdhuCuoCGKC8w" target="_blank">第一个在AlpacaEval上超越GPT-4的模型，出现了！</a>
+    |
+    <!-- 9.25 -->
+    <a href="https://mp.weixin.qq.com/s/G8HWTV7oin-4SbMitAwglA" target="_blank">蚂蚁集团CodeFuse开源代码生成模型，帮助提升编程效率</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/9cliF0WhqlkDpyVlh6YH3w" target="_blank">大模型的致命缺陷：从GPT到Llama，全都中枪，回答正确率惨不忍睹</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/_1u3iSsx-8agU_P0cKeOVw" target="_blank">DALL·E 3内部实测：Karpathy的神奇创造力！惊艳逼真「美国小姐」及50物全景，震撼效果大揭秘</a>
+    |
+    <!-- 9.26 --> 
+    <a href="https://mp.weixin.qq.com/s/ZfFCI_g12gfc3vtZl58tCQ" target="_blank">ChatGPT又又又更新啦！这次是支持语音聊天和图像问答</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/8cGcB3H468KVPd0ooS4-zg" target="_blank">一文捋清大模型可解释性，中美多家研究机构联合发布综述</a>
+    |
+    <!-- 9.27 --> 
+    <a href="https://mp.weixin.qq.com/s/WXP38RR6LPZ9RULu6AK-nA" target="_blank">OpenAI陷非法抄书风波：美国作家协会联名起诉，AI版权问题再次入局！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/97EFlswpypz4XarIkInFHA" target="_blank">ChatGPT电影推荐引爆点击狂潮：AI智慧VS电影评分谁会胜出！</a>
+    |   
+    <!-- 10.7 -->
+    <a href="https://mp.weixin.qq.com/s/vW3ox0CzkckDjXlD9bTNOw" target="_blank">谷歌与OpenAI合作，用Google Search为大模型刷新！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/zV1Xo6z4swY7mdXeD2N6gQ" target="_blank">论文投稿前先问问GPT-4！斯坦福实测5000篇，一半意见跟人类评审没差别</a>
+    | 
+    <!-- 10.8 -->
+    <a href="https://mp.weixin.qq.com/s/cZiBYIlBioQxouheJnI1Tw" target="_blank">独家 | AI 大牛景鲲、朱凯华离职百度，二人携手将创业</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/U3QWO3oyHQ2r9r3Fb5JPUA" target="_blank">深度学习可解释性新进展！Claude团队利用字典学习分解大模型神经元</a>
+    | 
+    <!-- 10.9 -->
+    <a href="https://mp.weixin.qq.com/s/90MVlfJSctTr2y9o1lGqdw" target="_blank">红袍纠察队挑战OpenAI：DALL-E 3部署ChatGPT的风险大揭秘！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/h7ouvSBf7_ASVpiQyyNhDg" target="_blank">
+    开放模型权重被指将导致AI失控，Meta遭举牌抗议，LeCun：开源AI社区如火如荼</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6RemCWnmfGhVOas1beiHWg" target="_blank">Say no to "大模型"！强化学习之父入局AGI创业，联手传奇程序员卡马克！</a>
+    | 
+    <!-- 10.10 -->
+    <a href="https://mp.weixin.qq.com/s/PvHx34OGKY60op9ArvqIcQ" target="_blank">奥特曼YC演讲：套壳ChatGPT者死，我行不代表你行</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/5qKrE7bHtBEx7IB7ermWqg" target="_blank">野心勃勃的MiniGPT-5出现了！Token变Voken，支持图文交叉生成</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/5qKrE7bHtBEx7IB7ermWqg" target="_blank">野心勃勃的MiniGPT-5出现了！Token变Voken，支持图文交叉生成</a>
+    | 
+    <!-- 10.12 --> 
+    <a href="https://mp.weixin.qq.com/s/ESm5LU8ljrwNFvHawDiTQQ" target="_blank">ChatGPT们红遍全球却不赚钱？每月亏损高达3000万美元</a>
+    |     
+    <a href="https://mp.weixin.qq.com/s/eHX64EzWLhWpi34IX2j0MA" target="_blank">突破『逆转诅咒』！新数学推理数据集揭秘，让大语言模型逆向推理能力翻倍</a>
+    | 
+    <!-- 10.13 --> 
+    <a href="https://mp.weixin.qq.com/s/ESm5LU8ljrwNFvHawDiTQQ" target="_blank">ChatGPT们红遍全球却不赚钱？每月亏损高达3000万美元</a>
+    |        
+    <!-- 10.14 --> 
+    <a href="https://mp.weixin.qq.com/s/Xk5MDKWCu325S7DKKC2sDQ" target="_blank">10个对抗样本0.2美元微调就能让chatgpt破防！LLM安全性不容忽视</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/B4Lt_jm-kRD14A7rGb0Mew" target="_blank">开源模型在竞赛数学MATH上首次突破50%，清华、微软联合推出工具集成推理语言模型</a>
+    | 
+    <!-- 10.15 --> 
+    <a href="https://mp.weixin.qq.com/s/WP60Ss_6eRX3U9NOLyPaYQ" target="_blank">推理成本增加10倍？对文心大模型4.0的一些猜想</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lptU2FwAAiaQtXtnPeftbA" target="_blank">从职高生一路逆袭到麻省理工博士，狂发5篇顶会，他是怎么做到的？</a>
+    | 
+    <!-- 10.16 --> 
+    <a href="https://mp.weixin.qq.com/s/lcDaJSTx60e_Ankq9iAdng" target="_blank">谷歌重磅发布 PaLI-3，四两拨千斤！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kyeyiw9TSCpvxNUPCLRwtg" target="_blank">字节跳动李航：对语言大模型的若干观察和思考</a>
+    |
+    
 
 </br>
 </br>
