--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -182,6 +182,9 @@
     |
     <a href="https://icc2024.ieee-icc.org/" target="_blank">ICC</a>
     |
+<!-- IR - A-->
+    <a href="https://sigir-2024.github.io/index.html" target="_blank">SIGIR</a>
+    |
 <!-- Knowledge engineering - A-->
     <a href="" target="_blank">ACL</a>
     |
@@ -2024,8 +2027,11 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/kyeyiw9TSCpvxNUPCLRwtg" target="_blank">字节跳动李航：对语言大模型的若干观察和思考</a>
     |
-    
-
+    <!-- 10.19 --> 
+    <a href="https://mp.weixin.qq.com/s/BHlq7huzJl1R_trr--aQFA" target="_blank">全面超越 AutoGPT，面壁智能联合清华 NLP 实验室打造大模型“超级英雄”—— XAgent</a>
+    |   
+    <a href="https://mp.weixin.qq.com/s/pYbQJ9D9iUtqREkDgcb5Jg" target="_blank">安全大模型层出不穷，网安行业也忍不住了</a>
+    | 
 </br>
 </br>
 AI论文: 
@@ -3626,6 +3632,9 @@ NLP/KG Field：
     |
     <a href="https://staff.itee.uq.edu.au/w.hua/" target="_blank">Wen Hua</a>
     |    
+    <a href="https://shiruipan.github.io/" target="_blank">Shirui Pan</a>
+    |
+
 <!-- Singapore -->
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
     |
