--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -225,6 +225,9 @@
     |
     <a href="" target="_blank">UIC</a>
     |
+<!-- Service Computing - B-->
+    <a href="https://services.conferences.computer.org/2024/" target="_blank">ICWS</a>
+    |
 <!-- software engineering - B-->
     <a href="https://www.dasfaa2024.org/" target="_blank">DASFAA</a>
     |
