--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -217,7 +217,7 @@
     |
     <a href="http://icmr2024.org/index.html" target="_blank">ICMR</a>
     |
-    <a href="" target="_blank">IJCNN</a>
+    <a href="https://2024.ieeewcci.org/" target="_blank">IJCNN</a>
     |
     <a href="https://pakdd2024.org/" target="_blank">PAKDD</a>
     |
@@ -2030,11 +2030,52 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/kyeyiw9TSCpvxNUPCLRwtg" target="_blank">字节跳动李航：对语言大模型的若干观察和思考</a>
     |
+    <!-- 10.17 --> 
+    <a href="https://mp.weixin.qq.com/s/SP39KVbC9BIz_AX3c6qAuQ" target="_blank">GPT-4和DALL·E 3彻底懵逼，这到底是「牛」还是「鲨」</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/r9oFcWPeuYvV-6hlU6k9Tw" target="_blank">为大模型而生！顶流大佬发起成立学术会议 COLM，或成为未来 NLP 最强顶会？！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/SHZa6FvD-X_wbUWengWZHQ" target="_blank">GPT-4V多模态能力惊人！公式截图直出代码，「龙与魔法世界」瞬间生成，OpenAI总裁激动转发</a>
+    | 
+    <!-- 10.18 --> 
+    <a href="https://mp.weixin.qq.com/s/HuhxkWFFERwfMPrBo0bxKw" target="_blank">偏偏不信文心大模型4.0比肩GPT-4！我为它们安排了一场龙虎斗！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/b1rgKoMSvDwegU9oTh5wSQ" target="_blank">让大模型真正学会1+1=2！谷歌教会模型自动学习推理规则，大模型的幻觉有救了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/RZlxizzRv_GQYXq6c6N_VA" target="_blank">LeCun和Bengio“吵”起来了，人工智能是“潘多拉魔盒”吗？</a>
+    |   
     <!-- 10.19 --> 
     <a href="https://mp.weixin.qq.com/s/BHlq7huzJl1R_trr--aQFA" target="_blank">全面超越 AutoGPT，面壁智能联合清华 NLP 实验室打造大模型“超级英雄”—— XAgent</a>
     |   
     <a href="https://mp.weixin.qq.com/s/pYbQJ9D9iUtqREkDgcb5Jg" target="_blank">安全大模型层出不穷，网安行业也忍不住了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lL8J9hiwavIK-v5WNllAqQ" target="_blank">开源智能体来啦！港大团队发布OpenAgents，可以搞数据分析、聊天、支持200+插件</a>
+    |    
+    <!-- 10.20 --> 
+    <a href="https://mp.weixin.qq.com/s/99CO5yWVDL5cwIccvGcq1Q" target="_blank">DALL·E 3原来是这样炼成的！OpenAI亲自解密，ChatGPT上可用</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/VHUCte_bAWV_Y3yqEmbJ1w" target="_blank">大模型搞“人肉搜索”，准确率高达95.8%！研究作者：已提醒OpenAI谷歌Meta</a>
+    |
+    <!-- 10.21 --> 
+    <a href="https://mp.weixin.qq.com/s/c5_g_z8NaShqoOO4mCzxKA" target="_blank">聊聊昨日ChatGPT全球宕机事件，带给我们的警示</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kRY5o_KJnNfPhmw_attaIg" target="_blank">推特爆火！超越ChatGPT和Llama2，新一代检索增强方法Self-RAG来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/LyPyn8LZD88VEWvrOMi9nQ" target="_blank">英伟达开源新Agent！用了GPT-4后，机器人把转笔、盘核桃都玩明白了</a>
+    |
+    <!-- 10.22 --> 
+    <a href="https://mp.weixin.qq.com/s/VVVzzrdyBmG-clAngNYzVw" target="_blank">陶哲轩疯狂安利Copilot：它帮我完成了一页纸证明，甚至能猜出我后面的过程</a>
+    |
+    <!-- 10.23 --> 
+    <a href="https://mp.weixin.qq.com/s/tTioa55oMZXyk7e6QilYWA" target="_blank">大幅提升大模型的通用智能体能力！清华最新研究，让Llama2直逼GPT-4？</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/ZRtcdhh-vx083zXv_FxecA" target="_blank">DeepMind：大模型又曝重大缺陷，无法自我纠正推理，除非提前得知正确答案</a>
+    |
+    <!-- 10.25 --> 
+    <a href="https://mp.weixin.qq.com/s/EvMXMCag1WJ9SxkVpnYacw" target="_blank">别再吹 GPT-4V 了！连北京烤鸭都不认识，你敢信？？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/1PpV0tR-YKAsVTRLXN20ng" target="_blank">LeCun又双叒唱衰自回归LLM：GPT-4的推理能力非常有限，有两篇论文为证</a>
+    |     
 </br>
 </br>
 AI论文: 
