--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -274,9 +274,19 @@
     <a href="https://2024.refsq.org/" target="_blank">REFSQ</a>
     |
     <a href="" target="_blank">ICWE</a>
+    |
+<!-- Computational Linguistics -->
+    <a href="" target="_blank">AACL</a>
+    |
+    <a href="http://cips-cl.org/static/CCL2024/index.html" target="_blank">CCL</a>
+    |
+    <a href="" target="_blank">CCKS</a>
+    |
+    <a href="" target="_blank">CCIR</a>
+    |
+    <a href="" target="_blank">ICWSM</a>
     |  
     <br/>
-
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -2075,7 +2085,57 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/EvMXMCag1WJ9SxkVpnYacw" target="_blank">别再吹 GPT-4V 了！连北京烤鸭都不认识，你敢信？？</a>
     | 
     <a href="https://mp.weixin.qq.com/s/1PpV0tR-YKAsVTRLXN20ng" target="_blank">LeCun又双叒唱衰自回归LLM：GPT-4的推理能力非常有限，有两篇论文为证</a>
+    |
+    <!-- 10.27 --> 
+    <a href="https://mp.weixin.qq.com/s/7wE7fIJWwkgbCcS-7JrVDQ" target="_blank">音乐智能体登场！我和杰伦的距离或许只差一个 MusicAgent！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/SetcI5TUz02lR3ENB66Y-g" target="_blank">OpenAI 组建安全 AGI 新团队！应对AI“潘多拉魔盒”</a>
+    | 
+    <!-- 10.28 --> 
+    <a href="https://mp.weixin.qq.com/s/_g94j49qUoO6HYDwcmvUBg" target="_blank">谷歌 20 亿美元投资 AI 初创公司 Anthropic，AI 赛道竞赛再加速</a>
+    | 
+    <!-- 10.29 --> 
+    <a href="https://mp.weixin.qq.com/s/ykkPFO2D3BRyLVIunfw0aQ" target="_blank">重磅！GPT-4又进化了！画图、插件、代码等能力被整合，超级智能体来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Oo1uUBNzyIPbdENUiZ5iBw" target="_blank">北京大学王选所推出 ALCUNA ，大模型新知识理解能力评测再添一榜！ </a>
+    |    
+    <!-- 10.30 --> 
+    <a href="https://mp.weixin.qq.com/s/iB9x-gBgCgTlPmD0vHrB9g" target="_blank">视觉霸主SAM和文图霸主CLIP强强联合！苹果联合UIUC，发布统一视觉模型SAM-CLIP，或掀起多模态新浪潮</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/yzTfST5c-vlV0lwNiWIycQ" target="_blank">一个小技巧，显著提升大模型推理能力！加州大学提出MAF多反馈框架</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kZLROyhY3efBa6CP9N5HAw" target="_blank">智谱AI全自研基座大模型再升级 ChatGLM3评测排名首位</a>
+    |    
+    <!-- 10.31 --> 
+    <a href="https://mp.weixin.qq.com/s/KxMBpFEewXW8NlcAwoPNkg" target="_blank">一个小妙招从Prompt菜鸟秒变专家！加州大学提出PromptAgent，帮你高效使用ChatGPT！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xbu0xR02IUzXZr5-drqgqw" target="_blank">解决多模态大模型幻觉问题的秘密武器：“啄木鸟”免重训方法！哪里出问题啄哪里！</a>
+    |
+    <!-- 11.2 --> 
+    <a href="https://mp.weixin.qq.com/s/rc-qLZQw49ZqZSUxOi1dHg" target="_blank">英伟达终于发布自家大语言模型，专攻辅助芯片设计</a>
+    | 
+    <!-- 11.2 --> 
+    <a href="https://mp.weixin.qq.com/s/Qetjro4tQwFCduUi0xK3cQ" target="_blank">谷歌DeepMind&CMU利用大模型让机器狗像人一样高效使用工具！搭建桥梁、利用杠杆原理搬起重物都不在话下</a>
+    | 
+    <!-- 11.3 --> 
+    <a href="https://mp.weixin.qq.com/s/XSDUvBVJb98w83WUJlLaBg" target="_blank">ChatGPT 被爆重大隐私泄露！在回答时突然蹦出陌生男子自拍照，你的数据都将被偷走训练模型！</a>
+    |
+    <!-- 11.4 --> 
+    <a href="https://mp.weixin.qq.com/s/BJPX8yP1rcAsIvCDlhe4vg" target="_blank">GPT-4的图灵测试结果出炉！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/5k7Ob_sivzYyUI7-EGd6kg" target="_blank">AI视频生成工具Gen-2炸裂更新：一句话生成4K超逼真视频，像素一口气拉到最高逼格</a>
+    | 
+    <!-- 11.5 --> 
+    <a href="https://mp.weixin.qq.com/s/8yCiggLtVWJbras_N3RiUg" target="_blank">爆料！马斯克 xAI 打造的ChatGPT竞品被曝光！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/KdDrM78swOs3Zi-0aO12Nw" target="_blank">再见了，提示~ 谷歌发布自适应提示方法，从此告别提示工程！</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/kawEec_W_XjrbLKrycykLw" target="_blank">GPT-4V可以用鼠标上网啦？MIT本科生出品</a>
+    |  
+    <!-- 11.6 --> 
+    <a href="https://mp.weixin.qq.com/s/APr70pgficElK28sqxsIjg" target="_blank">中国发表第一篇计算机顶会的人都怎么样了？中国ACL、AAAI、CVPR第一人是谁</a>
     |     
+
 </br>
 </br>
 AI论文: 
