--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -213,7 +213,7 @@
     |
     <a href="https://2024.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
-    <a href="" target="_blank">ICME</a>
+    <a href="https://2024.ieeeicme.org/" target="_blank">ICME</a>
     |
     <a href="http://icmr2024.org/index.html" target="_blank">ICMR</a>
     |
@@ -275,6 +275,9 @@
     |
     <a href="" target="_blank">ICWE</a>
     |
+<!-- information system - C-->
+    <a href="https://wise2024-qatar.com/" target="_blank">WISE</a>
+    |
 <!-- Computational Linguistics -->
     <a href="" target="_blank">AACL</a>
     |
@@ -287,6 +290,8 @@
     <a href="" target="_blank">ICWSM</a>
     |  
     <br/>
+    <a href="https://mp.weixin.qq.com/s/K-uLAs30FfeZthtDifZSHA" target="_blank">ICLR 2024论文审稿结果出炉！7000+高产论文创新纪录，扩散模型占比最高</a>
+    |
 
 <h4>2023</h4>
 <!-- network - A -->
@@ -2134,8 +2139,52 @@ ChatGPT:
     |  
     <!-- 11.6 --> 
     <a href="https://mp.weixin.qq.com/s/APr70pgficElK28sqxsIjg" target="_blank">中国发表第一篇计算机顶会的人都怎么样了？中国ACL、AAAI、CVPR第一人是谁</a>
-    |     
-
+    |
+    <a href="https://mp.weixin.qq.com/s/XPHqfY22Gv3kOSqXDeC7tg" target="_blank">李开复说话算数：零一万物大模型首次发布，AI 2.0 正在路上</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/u7eRid2XthOkpjKu5odwCw" target="_blank">第四届“四季青”青年论坛科学白洞—挑战问题发布</a>
+    |
+    <!-- 11.7 --> 
+    <a href="https://mp.weixin.qq.com/s/uo3zGzHReI_IsMN0J50SRw" target="_blank">ChatGPT开始狂飙！OpenAI官宣上线GPT商店，推出更强版GPT-4，价格骨折！</a>
+    |       
+    <!-- 11.8 --> 
+    <a href="https://mp.weixin.qq.com/s/9DlJgr74j3ztwSsD97k34A" target="_blank">开源语言大模型演进史：高质量基础模型竞赛</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/jEg1DitP9iiwA6r614wIWA" target="_blank">吴佳俊、李飞飞联合大作！提出全新脑机系统，用大脑操控机器人帮你做家务，要照进现实啦！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wzjp_mHj2Unx3p2mgdH2fg" target="_blank">Llama2失忆啦！微软教你三步抹掉模型的哈利波特记忆</a>
+    | 
+    <!-- 11.9 --> 
+    <a href="https://mp.weixin.qq.com/s/FG9qMIr9TM4tgu7QSZzocw" target="_blank">AI的尽头是美女，一句话生成你的专属“新垣结衣”，“我被美女包围”变为现实啦</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xujOi_skSPyYiYcfW94wWw" target="_blank">GPT-4和ChatGPT又双叒叕崩啦！奥特曼亲自致歉：流量远超预期</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/51pPfiwO6M_sM3kU9GYCiw" target="_blank">Bengio担任一作，联手一众图灵奖得主，预防AI失控，扛起AI监管大旗</a>
+    |
+    <!-- 11.10 --> 
+    <a href="https://mp.weixin.qq.com/s/QeU65mqc11sWTdBlvLk5sg" target="_blank">近日的ChatGPT宕机事件，竟是黑客组织的蓄谋攻击！？还声称要教训OpenAI和奥特曼</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-Ys-vKziwgVumzEw8JNWLg" target="_blank">小心你的大模型被基准评估坑了，模型直接傻掉！人大高瓴揭秘大模型作弊</a>
+    |
+    <!-- 11.11 --> 
+    <a href="https://mp.weixin.qq.com/s/VOKFFm6FF27z8-STHGhYFA" target="_blank">GPT4 Turbo的128K上下文是鸡肋？推特大佬斥巨资评测，斯坦福论文力证结论</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/9SfO7UWKmqJGmWA_9SWr4Q" target="_blank">DALL·E 3遭起诉！OpenAI的版权策略被吐槽像是一场闹剧！</a>
+    |
+    <!-- 11.12 --> 
+    <a href="https://mp.weixin.qq.com/s/QT671Wd7vEEeoO6dks8OMg" target="_blank">微软近日限制员工访问ChatGPT！</a>
+    | 
+    <!-- 11.13 --> 
+    <a href="https://mp.weixin.qq.com/s/OXtKETaS7YijQxVhsKdOaA" target="_blank">马斯克怒了，发帖挑衅ChatGPT，竟是奥特曼创建Grok同名的GPT？</a>
+    |   
+    <a href="https://mp.weixin.qq.com/s/krsX4BA0J7pGLu9O5-wkiw" target="_blank">视觉分词器统一图文信息，快手提出基座模型 LaVIT 刷榜多模态任务</a>
+    |
+    <!-- 11.14 --> 
+    <a href="https://mp.weixin.qq.com/s/OXtKETaS7YijQxVhsKdOaA" target="_blank">xx</a>
+    |  
+    <!-- 11.15 --> 
+    <a href="https://mp.weixin.qq.com/s/OXtKETaS7YijQxVhsKdOaA" target="_blank">xx</a>
+    | 
 </br>
 </br>
 AI论文: 
